--- a/src/components/custom-button/custom-button.styles.css
+++ b/src/components/custom-button/custom-button.styles.css
@@ -1,7 +1,8 @@
 .custom-btn{
     border-radius: 0px 29px 29px 29px;
     opacity: 1;
-    width: 200px;
+    width: 150px;
+    font-size: 13px;
     background-color: #4B70D6;
     color: white;
 }
