--- a/src/components/task-area/task-area.styles.css
+++ b/src/components/task-area/task-area.styles.css
@@ -3,14 +3,17 @@
     background-color: white;
     margin-left: 10px;
     padding: 25px;
+    display: flex;
+    align-items: center;
 }
 
-#task-name{
+#task-font{
     font-size: 12px;
     color: #3E3E3E;
 }
 
 #task-price{
+    margin-bottom: 4px;
     font-size: 8px;
     color: #707070;
 }
@@ -23,7 +26,6 @@
 
 .name{
     font-size: 12px;
-    padding-left: 8px;
 }
 
 .assigned{
@@ -31,9 +33,51 @@
 }
 
 .user-details{
-    width: 100px;
+    width: 150px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+.pill{
+    border-radius: 10px;
+    padding: px;
+    padding: 3px 15px;
+    color: black;
+    font-style: italic;
+    border: none;
+    background-color: #E2E2E2;
+    font-size: 8px;
+}
+
+.status{
+    border-radius: 0px 29px 29px 29px;
+    border-color: #929292;
+    opacity: 1;
+    width: 100px;
+    font-size: 13px;
+    background-color:transparent;
+    color: black;
+}
+
+.btn-primary:hover {
+    background-color: transparent;
+    color: black;
+    border-color:#929292;
+}
+
+.dot {
+    height: 10px;
+    width: 10px;
+    background-color: goldenrod;
+    border-radius: 50%;
+    display: inline-block;
+  }
+
+  .dropdown-toggle:after {
+    border: 0;
+ }
+
+ .dropdown:hover .dropdown-menu {
+    display: block;
+}
