--- a/src/components/task-area/task-area.styles.css
+++ b/src/components/task-area/task-area.styles.css
@@ -5,6 +5,7 @@
     padding: 25px;
     display: flex;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 #task-font{
@@ -55,7 +56,7 @@
     border-color: #929292;
     opacity: 1;
     width: 100px;
-    font-size: 13px;
+    font-size: 10px;
     background-color:transparent;
     color: black;
 }
@@ -67,11 +68,12 @@
 }
 
 .dot {
-    height: 10px;
-    width: 10px;
+    height: 8px;
+    width: 8px;
     background-color: goldenrod;
     border-radius: 50%;
     display: inline-block;
+    margin-right: 10px;
   }
 
   .dropdown-toggle:after {
