--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 .form-check{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .form-check-label{
@@ -47,4 +47,8 @@ body {
 
 .pagintionActive li a{
   display: none;
+}
+
+.pill{
+  pointer-events: none;
 }
