Filtering functions works fully now both by tags and by price

--- a/src/components/task-area/task-area.styles.css
+++ b/src/components/task-area/task-area.styles.css
@@ -108,7 +108,7 @@
 
 .deployment{
     color: #0d6efd;
-    background-color: #afcaf1;
+    background-color: #dbeaff;
     opacity: 1;
 }
 .testing{
